@@ -1,164 +1,0 @@
-import TopExamples.grid
-
-TopExamples.grid.Add('sys_fullSim').datasets = [
-'mc15_13TeV.301535.Sherpa_CT10_eegammaPt10_35.merge.DAOD_HIGG8D1.e3952_s2608_s2183_r7725_r7676_p2949',
-'mc15_13TeV.301536.Sherpa_CT10_mumugammaPt10_35.merge.DAOD_HIGG8D1.e3952_s2608_s2183_r7725_r7676_p2949',
-'mc15_13TeV.301899.Sherpa_CT10_eegammaPt35_70.merge.DAOD_HIGG8D1.e3952_s2608_s2183_r7725_r7676_p2949',
-'mc15_13TeV.301900.Sherpa_CT10_eegammaPt70_140.merge.DAOD_HIGG8D1.e3952_s2608_s2183_r7725_r7676_p2949',
-'mc15_13TeV.301901.Sherpa_CT10_eegammaPt140.merge.DAOD_HIGG8D1.e3952_s2608_s2183_r7725_r7676_p2949',
-'mc15_13TeV.301902.Sherpa_CT10_mumugammaPt35_70.merge.DAOD_HIGG8D1.e3952_s2608_s2183_r7725_r7676_p2949',
-'mc15_13TeV.301903.Sherpa_CT10_mumugammaPt70_140.merge.DAOD_HIGG8D1.e3952_s2608_s2183_r7725_r7676_p2949',
-'mc15_13TeV.301904.Sherpa_CT10_mumugammaPt140.merge.DAOD_HIGG8D1.e3952_s2608_s2183_r7725_r7676_p2949',
-'mc15_13TeV.301905.Sherpa_CT10_tautaugammaPt35_70.merge.DAOD_HIGG8D1.e3952_s2608_s2183_r7725_r7676_p2949',
-'mc15_13TeV.301906.Sherpa_CT10_tautaugammaPt70_140.merge.DAOD_HIGG8D1.e3952_s2608_s2183_r7725_r7676_p2949',
-'mc15_13TeV.341998.aMcAtNloHppEG_UEEE5_CTEQ6L1_CT10ME_tWH125_gamgam_yt_plus1.merge.AOD.e4394_s2608_r7772_r7676',
-'mc15_13TeV.342001.aMcAtNloHppEG_UEEE5_CTEQ6L1_CT10ME_tWH125_lep_yt_plus1.merge.AOD.e4394_s2608_r7772_r7676',
-'mc15_13TeV.342004.aMcAtNloHppEG_UEEE5_CTEQ6L1_CT10ME_tWH125_bbbar_yt_plus1.merge.AOD.e4394_s2608_r7772_r7676',
-'mc15_13TeV.342284.Pythia8EvtGen_A14NNPDF23LO_WH125_inc.merge.AOD.e4246_s2608_s2183_r7772_r7676',
-'mc15_13TeV.342285.Pythia8EvtGen_A14NNPDF23LO_ZH125_inc.merge.AOD.e4246_s2608_s2183_r7772_r7676',
-'mc15_13TeV.343267.MadGraphPythia8EvtGen_A14_CT10ME_tHjb125_gamgam.merge.AOD.e4606_s2726_r7772_r7676',
-'mc15_13TeV.343270.MadGraphPythia8EvtGen_A14_CT10ME_tHjb125_bbbar.merge.AOD.e4610_s2726_r7772_r7676',
-'mc15_13TeV.343273.MadGraphPythia8EvtGen_A14_CT10ME_tHjb125_lep.merge.AOD.e4606_s2726_r7772_r7676',
-'mc15_13TeV.344096.CalcHepPythia8_A14_CTEQ6L1_HppHmm_200GeV_4W.merge.DAOD_HIGG8D1.e5024_s2726_r7772_r7676_p2949',
-'mc15_13TeV.344097.CalcHepPythia8_A14_CTEQ6L1_HppHmm_300GeV_4W.merge.DAOD_HIGG8D1.e5024_s2726_r7772_r7676_p2949',
-'mc15_13TeV.344098.CalcHepPythia8_A14_CTEQ6L1_HppHmm_400GeV_4W.merge.DAOD_HIGG8D1.e5024_s2726_r7772_r7676_p2949',
-'mc15_13TeV.361063.Sherpa_CT10_llll.merge.AOD.e3836_s2608_s2183_r7725_r7676',
-'mc15_13TeV.361064.Sherpa_CT10_lllvSFMinus.merge.AOD.e3836_s2608_s2183_r7725_r7676',
-'mc15_13TeV.361065.Sherpa_CT10_lllvOFMinus.merge.AOD.e3836_s2608_s2183_r7725_r7676',
-'mc15_13TeV.361066.Sherpa_CT10_lllvSFPlus.merge.AOD.e3836_s2608_s2183_r7725_r7676',
-'mc15_13TeV.361067.Sherpa_CT10_lllvOFPlus.merge.AOD.e3836_s2608_s2183_r7725_r7676',
-'mc15_13TeV.361068.Sherpa_CT10_llvv.merge.AOD.e3836_s2608_s2183_r7725_r7676',
-'mc15_13TeV.361069.Sherpa_CT10_llvvjj_ss_EW4.merge.AOD.e3836_s2608_s2183_r7725_r7676',
-'mc15_13TeV.361070.Sherpa_CT10_llvvjj_ss_EW6.merge.AOD.e3836_s2608_s2183_r7725_r7676',
-'mc15_13TeV.361071.Sherpa_CT10_lllvjj_EW6.merge.AOD.e3836_s2726_r7772_r7676',
-'mc15_13TeV.361072.Sherpa_CT10_lllljj_EW6.merge.AOD.e3836_s2608_s2183_r7772_r7676',
-'mc15_13TeV.361073.Sherpa_CT10_ggllll.merge.AOD.e3836_s2608_s2183_r7772_r7676',
-'mc15_13TeV.361077.Sherpa_CT10_ggllvv.merge.AOD.e3836_s2608_s2183_r7772_r7676',
-'mc15_13TeV.361091.Sherpa_CT10_WplvWmqq_SHv21_improved.merge.AOD.e4607_s2726_r7725_r7676',
-'mc15_13TeV.361092.Sherpa_CT10_WpqqWmlv_SHv21_improved.merge.AOD.e4607_s2726_r7725_r7676',
-'mc15_13TeV.361093.Sherpa_CT10_WlvZqq_SHv21_improved.merge.AOD.e4607_s2726_r7725_r7676',
-'mc15_13TeV.361094.Sherpa_CT10_WqqZll_SHv21_improved.merge.AOD.e4607_s2726_r7725_r7676',
-'mc15_13TeV.361095.Sherpa_CT10_WqqZvv_SHv21_improved.merge.AOD.e4607_s2726_r7772_r7676',
-'mc15_13TeV.361096.Sherpa_CT10_ZqqZll_SHv21_improved.merge.AOD.e4607_s2726_r7725_r7676',
-'mc15_13TeV.361097.Sherpa_CT10_ZqqZvv_SHv21_improved.merge.AOD.e4607_s2726_r7772_r7676',
-'mc15_13TeV.361620.Sherpa_CT10_WWW_3l3v.merge.AOD.e4093_s2608_s2183_r8112_r7676',
-'mc15_13TeV.361621.Sherpa_CT10_WWZ_4l2v.merge.AOD.e4053_s2608_s2183_r8112_r7676',
-'mc15_13TeV.361622.Sherpa_CT10_WWZ_2l4v.merge.AOD.e4053_s2608_s2183_r8112_r7676',
-'mc15_13TeV.361623.Sherpa_CT10_WZZ_5l1v.merge.AOD.e4093_s2608_s2183_r8112_r7676',
-'mc15_13TeV.361624.Sherpa_CT10_WZZ_3l3v.merge.AOD.e4093_s2608_s2183_r8112_r7676',
-'mc15_13TeV.361625.Sherpa_CT10_ZZZ_6l0v.merge.AOD.e4093_s2608_s2183_r7772_r7676',
-'mc15_13TeV.361626.Sherpa_CT10_ZZZ_4l2v.merge.AOD.e4093_s2608_s2183_r7772_r7676',
-'mc15_13TeV.361627.Sherpa_CT10_ZZZ_2l4v.merge.AOD.e4093_s2608_s2183_r7772_r7676',
-'mc15_13TeV.364100.Sherpa_221_NNPDF30NNLO_Zmumu_MAXHTPTV0_70_CVetoBVeto.merge.AOD.e5271_s2726_r7772_r7676',
-'mc15_13TeV.364101.Sherpa_221_NNPDF30NNLO_Zmumu_MAXHTPTV0_70_CFilterBVeto.merge.AOD.e5271_s2726_r7772_r7676',
-'mc15_13TeV.364102.Sherpa_221_NNPDF30NNLO_Zmumu_MAXHTPTV0_70_BFilter.merge.AOD.e5271_s2726_r7772_r7676',
-'mc15_13TeV.364103.Sherpa_221_NNPDF30NNLO_Zmumu_MAXHTPTV70_140_CVetoBVeto.merge.AOD.e5271_s2726_r7772_r7676',
-'mc15_13TeV.364104.Sherpa_221_NNPDF30NNLO_Zmumu_MAXHTPTV70_140_CFilterBVeto.merge.AOD.e5271_s2726_r7772_r7676',
-'mc15_13TeV.364105.Sherpa_221_NNPDF30NNLO_Zmumu_MAXHTPTV70_140_BFilter.merge.AOD.e5271_s2726_r7772_r7676',
-'mc15_13TeV.364106.Sherpa_221_NNPDF30NNLO_Zmumu_MAXHTPTV140_280_CVetoBVeto.merge.AOD.e5271_s2726_r7772_r7676',
-'mc15_13TeV.364107.Sherpa_221_NNPDF30NNLO_Zmumu_MAXHTPTV140_280_CFilterBVeto.merge.AOD.e5271_s2726_r7772_r7676',
-'mc15_13TeV.364108.Sherpa_221_NNPDF30NNLO_Zmumu_MAXHTPTV140_280_BFilter.merge.AOD.e5271_s2726_r7772_r7676',
-'mc15_13TeV.364109.Sherpa_221_NNPDF30NNLO_Zmumu_MAXHTPTV280_500_CVetoBVeto.merge.AOD.e5271_s2726_r7772_r7676',
-'mc15_13TeV.364110.Sherpa_221_NNPDF30NNLO_Zmumu_MAXHTPTV280_500_CFilterBVeto.merge.AOD.e5271_s2726_r7772_r7676',
-'mc15_13TeV.364111.Sherpa_221_NNPDF30NNLO_Zmumu_MAXHTPTV280_500_BFilter.merge.AOD.e5271_s2726_r7772_r7676',
-'mc15_13TeV.364112.Sherpa_221_NNPDF30NNLO_Zmumu_MAXHTPTV500_1000.merge.AOD.e5271_s2726_r7772_r7676',
-'mc15_13TeV.364113.Sherpa_221_NNPDF30NNLO_Zmumu_MAXHTPTV1000_E_CMS.merge.AOD.e5271_s2726_r7772_r7676',
-'mc15_13TeV.364114.Sherpa_221_NNPDF30NNLO_Zee_MAXHTPTV0_70_CVetoBVeto.merge.AOD.e5299_s2726_r7772_r7676',
-'mc15_13TeV.364115.Sherpa_221_NNPDF30NNLO_Zee_MAXHTPTV0_70_CFilterBVeto.merge.AOD.e5299_s2726_r7772_r7676',
-'mc15_13TeV.364116.Sherpa_221_NNPDF30NNLO_Zee_MAXHTPTV0_70_BFilter.merge.AOD.e5299_s2726_r7772_r7676',
-'mc15_13TeV.364117.Sherpa_221_NNPDF30NNLO_Zee_MAXHTPTV70_140_CVetoBVeto.merge.AOD.e5299_s2726_r7772_r7676',
-'mc15_13TeV.364118.Sherpa_221_NNPDF30NNLO_Zee_MAXHTPTV70_140_CFilterBVeto.merge.AOD.e5299_s2726_r7772_r7676',
-'mc15_13TeV.364119.Sherpa_221_NNPDF30NNLO_Zee_MAXHTPTV70_140_BFilter.merge.AOD.e5299_s2726_r7772_r7676',
-'mc15_13TeV.364120.Sherpa_221_NNPDF30NNLO_Zee_MAXHTPTV140_280_CVetoBVeto.merge.AOD.e5299_s2726_r7772_r7676',
-'mc15_13TeV.364121.Sherpa_221_NNPDF30NNLO_Zee_MAXHTPTV140_280_CFilterBVeto.merge.AOD.e5299_s2726_r7772_r7676',
-'mc15_13TeV.364122.Sherpa_221_NNPDF30NNLO_Zee_MAXHTPTV140_280_BFilter.merge.AOD.e5299_s2726_r7772_r7676',
-'mc15_13TeV.364123.Sherpa_221_NNPDF30NNLO_Zee_MAXHTPTV280_500_CVetoBVeto.merge.AOD.e5299_s2726_r7772_r7676',
-'mc15_13TeV.364124.Sherpa_221_NNPDF30NNLO_Zee_MAXHTPTV280_500_CFilterBVeto.merge.AOD.e5299_s2726_r7772_r7676',
-'mc15_13TeV.364125.Sherpa_221_NNPDF30NNLO_Zee_MAXHTPTV280_500_BFilter.merge.AOD.e5299_s2726_r7772_r7676',
-'mc15_13TeV.364126.Sherpa_221_NNPDF30NNLO_Zee_MAXHTPTV500_1000.merge.AOD.e5299_s2726_r7772_r7676',
-'mc15_13TeV.364127.Sherpa_221_NNPDF30NNLO_Zee_MAXHTPTV1000_E_CMS.merge.AOD.e5299_s2726_r7772_r7676',
-'mc15_13TeV.364128.Sherpa_221_NNPDF30NNLO_Ztautau_MAXHTPTV0_70_CVetoBVeto.merge.AOD.e5307_s2726_r7772_r7676',
-'mc15_13TeV.364129.Sherpa_221_NNPDF30NNLO_Ztautau_MAXHTPTV0_70_CFilterBVeto.merge.AOD.e5307_s2726_r7772_r7676',
-'mc15_13TeV.364130.Sherpa_221_NNPDF30NNLO_Ztautau_MAXHTPTV0_70_BFilter.merge.AOD.e5307_s2726_r7772_r7676',
-'mc15_13TeV.364131.Sherpa_221_NNPDF30NNLO_Ztautau_MAXHTPTV70_140_CVetoBVeto.merge.AOD.e5307_s2726_r7772_r7676',
-'mc15_13TeV.364132.Sherpa_221_NNPDF30NNLO_Ztautau_MAXHTPTV70_140_CFilterBVeto.merge.AOD.e5307_s2726_r7772_r7676',
-'mc15_13TeV.364133.Sherpa_221_NNPDF30NNLO_Ztautau_MAXHTPTV70_140_BFilter.merge.AOD.e5307_s2726_r7772_r7676',
-'mc15_13TeV.364134.Sherpa_221_NNPDF30NNLO_Ztautau_MAXHTPTV140_280_CVetoBVeto.merge.AOD.e5307_s2726_r7772_r7676',
-'mc15_13TeV.364135.Sherpa_221_NNPDF30NNLO_Ztautau_MAXHTPTV140_280_CFilterBVeto.merge.AOD.e5307_s2726_r7772_r7676',
-'mc15_13TeV.364136.Sherpa_221_NNPDF30NNLO_Ztautau_MAXHTPTV140_280_BFilter.merge.AOD.e5307_s2726_r7772_r7676',
-'mc15_13TeV.364137.Sherpa_221_NNPDF30NNLO_Ztautau_MAXHTPTV280_500_CVetoBVeto.merge.AOD.e5307_s2726_r7772_r7676',
-'mc15_13TeV.364138.Sherpa_221_NNPDF30NNLO_Ztautau_MAXHTPTV280_500_CFilterBVeto.merge.AOD.e5313_s2726_r7772_r7676',
-'mc15_13TeV.364139.Sherpa_221_NNPDF30NNLO_Ztautau_MAXHTPTV280_500_BFilter.merge.AOD.e5313_s2726_r7772_r7676',
-'mc15_13TeV.364140.Sherpa_221_NNPDF30NNLO_Ztautau_MAXHTPTV500_1000.merge.AOD.e5307_s2726_r7772_r7676',
-'mc15_13TeV.364141.Sherpa_221_NNPDF30NNLO_Ztautau_MAXHTPTV1000_E_CMS.merge.AOD.e5307_s2726_r7772_r7676',
-'mc15_13TeV.364156.Sherpa_221_NNPDF30NNLO_Wmunu_MAXHTPTV0_70_CVetoBVeto.merge.AOD.e5340_s2726_r7772_r7676',
-'mc15_13TeV.364157.Sherpa_221_NNPDF30NNLO_Wmunu_MAXHTPTV0_70_CFilterBVeto.merge.AOD.e5340_s2726_r7772_r7676',
-'mc15_13TeV.364158.Sherpa_221_NNPDF30NNLO_Wmunu_MAXHTPTV0_70_BFilter.merge.AOD.e5340_s2726_r7772_r7676',
-'mc15_13TeV.364159.Sherpa_221_NNPDF30NNLO_Wmunu_MAXHTPTV70_140_CVetoBVeto.merge.AOD.e5340_s2726_r7772_r7676',
-'mc15_13TeV.364160.Sherpa_221_NNPDF30NNLO_Wmunu_MAXHTPTV70_140_CFilterBVeto.merge.AOD.e5340_s2726_r7772_r7676',
-'mc15_13TeV.364161.Sherpa_221_NNPDF30NNLO_Wmunu_MAXHTPTV70_140_BFilter.merge.AOD.e5340_s2726_r7772_r7676',
-'mc15_13TeV.364162.Sherpa_221_NNPDF30NNLO_Wmunu_MAXHTPTV140_280_CVetoBVeto.merge.AOD.e5340_s2726_r7772_r7676',
-'mc15_13TeV.364163.Sherpa_221_NNPDF30NNLO_Wmunu_MAXHTPTV140_280_CFilterBVeto.merge.AOD.e5340_s2726_r7772_r7676',
-'mc15_13TeV.364164.Sherpa_221_NNPDF30NNLO_Wmunu_MAXHTPTV140_280_BFilter.merge.AOD.e5340_s2726_r7772_r7676',
-'mc15_13TeV.364165.Sherpa_221_NNPDF30NNLO_Wmunu_MAXHTPTV280_500_CVetoBVeto.merge.AOD.e5340_s2726_r7772_r7676',
-'mc15_13TeV.364166.Sherpa_221_NNPDF30NNLO_Wmunu_MAXHTPTV280_500_CFilterBVeto.merge.AOD.e5340_s2726_r7772_r7676',
-'mc15_13TeV.364167.Sherpa_221_NNPDF30NNLO_Wmunu_MAXHTPTV280_500_BFilter.merge.AOD.e5340_s2726_r7772_r7676',
-'mc15_13TeV.364168.Sherpa_221_NNPDF30NNLO_Wmunu_MAXHTPTV500_1000.merge.AOD.e5340_s2726_r7772_r7676',
-'mc15_13TeV.364169.Sherpa_221_NNPDF30NNLO_Wmunu_MAXHTPTV1000_E_CMS.merge.AOD.e5340_s2726_r7772_r7676',
-'mc15_13TeV.364170.Sherpa_221_NNPDF30NNLO_Wenu_MAXHTPTV0_70_CVetoBVeto.merge.AOD.e5340_s2726_r7772_r7676',
-'mc15_13TeV.364171.Sherpa_221_NNPDF30NNLO_Wenu_MAXHTPTV0_70_CFilterBVeto.merge.AOD.e5340_s2726_r7772_r7676',
-'mc15_13TeV.364172.Sherpa_221_NNPDF30NNLO_Wenu_MAXHTPTV0_70_BFilter.merge.AOD.e5340_s2726_r7772_r7676',
-'mc15_13TeV.364173.Sherpa_221_NNPDF30NNLO_Wenu_MAXHTPTV70_140_CVetoBVeto.merge.AOD.e5340_s2726_r7772_r7676',
-'mc15_13TeV.364174.Sherpa_221_NNPDF30NNLO_Wenu_MAXHTPTV70_140_CFilterBVeto.merge.AOD.e5340_s2726_r7772_r7676',
-'mc15_13TeV.364175.Sherpa_221_NNPDF30NNLO_Wenu_MAXHTPTV70_140_BFilter.merge.AOD.e5340_s2726_r7772_r7676',
-'mc15_13TeV.364176.Sherpa_221_NNPDF30NNLO_Wenu_MAXHTPTV140_280_CVetoBVeto.merge.AOD.e5340_s2726_r7772_r7676',
-'mc15_13TeV.364177.Sherpa_221_NNPDF30NNLO_Wenu_MAXHTPTV140_280_CFilterBVeto.merge.AOD.e5340_s2726_r7772_r7676',
-'mc15_13TeV.364178.Sherpa_221_NNPDF30NNLO_Wenu_MAXHTPTV140_280_BFilter.merge.AOD.e5340_s2726_r7772_r7676',
-'mc15_13TeV.364179.Sherpa_221_NNPDF30NNLO_Wenu_MAXHTPTV280_500_CVetoBVeto.merge.AOD.e5340_s2726_r7772_r7676',
-'mc15_13TeV.364180.Sherpa_221_NNPDF30NNLO_Wenu_MAXHTPTV280_500_CFilterBVeto.merge.AOD.e5340_s2726_r7772_r7676',
-'mc15_13TeV.364181.Sherpa_221_NNPDF30NNLO_Wenu_MAXHTPTV280_500_BFilter.merge.AOD.e5340_s2726_r7772_r7676',
-'mc15_13TeV.364182.Sherpa_221_NNPDF30NNLO_Wenu_MAXHTPTV500_1000.merge.AOD.e5340_s2726_r7772_r7676',
-'mc15_13TeV.364183.Sherpa_221_NNPDF30NNLO_Wenu_MAXHTPTV1000_E_CMS.merge.AOD.e5340_s2726_r7772_r7676',
-'mc15_13TeV.364184.Sherpa_221_NNPDF30NNLO_Wtaunu_MAXHTPTV0_70_CVetoBVeto.merge.AOD.e5340_s2726_r7772_r7676',
-'mc15_13TeV.364185.Sherpa_221_NNPDF30NNLO_Wtaunu_MAXHTPTV0_70_CFilterBVeto.merge.AOD.e5340_s2726_r7772_r7676',
-'mc15_13TeV.364186.Sherpa_221_NNPDF30NNLO_Wtaunu_MAXHTPTV0_70_BFilter.merge.AOD.e5340_s2726_r7772_r7676',
-'mc15_13TeV.364187.Sherpa_221_NNPDF30NNLO_Wtaunu_MAXHTPTV70_140_CVetoBVeto.merge.AOD.e5340_s2726_r7772_r7676',
-'mc15_13TeV.364188.Sherpa_221_NNPDF30NNLO_Wtaunu_MAXHTPTV70_140_CFilterBVeto.merge.AOD.e5340_s2726_r7772_r7676',
-'mc15_13TeV.364189.Sherpa_221_NNPDF30NNLO_Wtaunu_MAXHTPTV70_140_BFilter.merge.AOD.e5340_s2726_r7772_r7676',
-'mc15_13TeV.364190.Sherpa_221_NNPDF30NNLO_Wtaunu_MAXHTPTV140_280_CVetoBVeto.merge.AOD.e5340_s2726_r7772_r7676',
-'mc15_13TeV.364191.Sherpa_221_NNPDF30NNLO_Wtaunu_MAXHTPTV140_280_CFilterBVeto.merge.AOD.e5340_s2726_r7772_r7676',
-'mc15_13TeV.364192.Sherpa_221_NNPDF30NNLO_Wtaunu_MAXHTPTV140_280_BFilter.merge.AOD.e5340_s2726_r7772_r7676',
-'mc15_13TeV.364193.Sherpa_221_NNPDF30NNLO_Wtaunu_MAXHTPTV280_500_CVetoBVeto.merge.AOD.e5340_s2726_r7772_r7676',
-'mc15_13TeV.364194.Sherpa_221_NNPDF30NNLO_Wtaunu_MAXHTPTV280_500_CFilterBVeto.merge.AOD.e5340_s2726_r7772_r7676',
-'mc15_13TeV.364195.Sherpa_221_NNPDF30NNLO_Wtaunu_MAXHTPTV280_500_BFilter.merge.AOD.e5340_s2726_r7772_r7676',
-'mc15_13TeV.364196.Sherpa_221_NNPDF30NNLO_Wtaunu_MAXHTPTV500_1000.merge.AOD.e5340_s2726_r7772_r7676',
-'mc15_13TeV.364197.Sherpa_221_NNPDF30NNLO_Wtaunu_MAXHTPTV1000_E_CMS.merge.AOD.e5340_s2726_r7772_r7676',
-'mc15_13TeV.410011.PowhegPythiaEvtGen_P2012_singletop_tchan_lept_top.merge.AOD.e3824_s2608_s2183_r7725_r7676',
-'mc15_13TeV.410012.PowhegPythiaEvtGen_P2012_singletop_tchan_lept_antitop.merge.AOD.e3824_s2608_s2183_r7725_r7676',
-'mc15_13TeV.410013.PowhegPythiaEvtGen_P2012_Wt_inclusive_top.merge.AOD.e3753_s2608_s2183_r7725_r7676',
-'mc15_13TeV.410014.PowhegPythiaEvtGen_P2012_Wt_inclusive_antitop.merge.AOD.e3753_s2608_s2183_r7725_r7676',
-'mc15_13TeV.410025.PowhegPythiaEvtGen_P2012_SingleTopSchan_noAllHad_top.merge.AOD.e3998_s2608_s2183_r7725_r7676',
-'mc15_13TeV.410026.PowhegPythiaEvtGen_P2012_SingleTopSchan_noAllHad_antitop.merge.AOD.e3998_s2608_s2183_r7725_r7676',
-'mc15_13TeV.410050.MadGraphPythiaEvtGen_P2012_tZ_4fl_tchan_noAllHad.merge.DAOD_HIGG8D1.e4279_s2608_s2183_r7725_r7676_p2949',
-'mc15_13TeV.410080.MadGraphPythia8EvtGen_A14NNPDF23_4topSM.merge.AOD.e4111_s2608_s2183_r7725_r7676',
-'mc15_13TeV.410081.MadGraphPythia8EvtGen_A14NNPDF23_ttbarWW.merge.AOD.e4111_s2608_s2183_r7725_r7676',
-'mc15_13TeV.410155.aMcAtNloPythia8EvtGen_MEN30NLO_A14N23LO_ttW.merge.AOD.e5070_s2726_r7772_r7676',
-'mc15_13TeV.410156.aMcAtNloPythia8EvtGen_MEN30NLO_A14N23LO_ttZnunu.merge.AOD.e5070_s2726_r7772_r7676',
-'mc15_13TeV.410157.aMcAtNloPythia8EvtGen_MEN30NLO_A14N23LO_ttZqq.merge.AOD.e5070_s2726_r7772_r7676',
-'mc15_13TeV.410215.aMcAtNloPythia8EvtGen_A14_NNPDF23LO_260000_tWZDR.merge.AOD.e4851_s2726_r7725_r7676',
-'mc15_13TeV.410218.aMcAtNloPythia8EvtGen_MEN30NLO_A14N23LO_ttee.merge.AOD.e5070_s2726_r7772_r7676',
-'mc15_13TeV.410219.aMcAtNloPythia8EvtGen_MEN30NLO_A14N23LO_ttmumu.merge.AOD.e5070_s2726_r7772_r7676',
-'mc15_13TeV.410220.aMcAtNloPythia8EvtGen_MEN30NLO_A14N23LO_tttautau.merge.AOD.e5070_s2726_r7772_r7676',
-'mc15_13TeV.410501.PowhegPythia8EvtGen_A14_ttbar_hdamp258p75_nonallhad.merge.AOD.e5458_s2726_r7772_r7676',
-'mc15_13TeV.410502.PowhegPythia8EvtGen_A14_ttbar_hdamp258p75_allhad.merge.AOD.e5475_s2726_r7772_r7676',
-]
-
-TopExamples.grid.Add('sys_fastSim').datasets = [
-'mc15_13TeV.304014.MadGraphPythia8EvtGen_A14NNPDF23_3top_SM.merge.AOD.e4324_a766_a818_r7676',    
-'mc15_13TeV.344364.CalcHepPythia8_A14_CTEQ6L1_HppHmm_500GeV_4W.merge.DAOD_HIGG8D1.e5207_a766_a821_r7676_p2949',
-'mc15_13TeV.344365.CalcHepPythia8_A14_CTEQ6L1_HppHmm_600GeV_4W.merge.DAOD_HIGG8D1.e5207_a766_a821_r7676_p2949',
-'mc15_13TeV.344366.CalcHepPythia8_A14_CTEQ6L1_HppHmm_700GeV_4W.merge.DAOD_HIGG8D1.e5207_a766_a821_r7676_p2949',
-'mc15_13TeV.344367.CalcHepPythia8_A14_CTEQ6L1_HppmmHmp_200GeV.merge.DAOD_HIGG8D1.e5207_a766_a821_r7676_p2949',
-'mc15_13TeV.344368.CalcHepPythia8_A14_CTEQ6L1_HppmmHmp_300GeV.merge.DAOD_HIGG8D1.e5207_a766_a821_r7676_p2949',
-'mc15_13TeV.344369.CalcHepPythia8_A14_CTEQ6L1_HppmmHmp_400GeV.merge.DAOD_HIGG8D1.e5207_a766_a821_r7676_p2949',
-]
