@@ -42,7 +42,7 @@ sed 's/IsAFII False/IsAFII True/' generic_config-mc15-Sys.txt > generic_config-m
 sed 's/IsAFII False/IsAFII True/' generic_config-mc15-Sys-Jets1.txt > generic_config-mc15-Sys-Jets1_fastSim.txt
 sed 's/IsAFII False/IsAFII True/' generic_config-mc15-Sys-Jets2.txt > generic_config-mc15-Sys-Jets2_fastSim.txt
 sed 's/IsAFII False/IsAFII True/' generic_config-mc15-Sys-Other.txt > generic_config-mc15-Sys-Other_fastSim.txt
-#python ../scripts/01SubmitToGrid.py
+#python ttHMultilepton/scripts/01SubmitToGrid.py
 
 
 popd
