@@ -1,6 +1,14 @@
+2017-02-21 Robert Wolff <robert.wolff@cern.ch>
+	* Add mc_isAFII (for fast simulation samples true)
+	* add latest TDP to setupRC script
+	* add possibility to run submission script from everywhere
+	* add automatic priority 1 samples from x-section files for Sys jobs
+	* move (other) signal samples from bkg x-sec file to sig x-sec file
+	* fix correct diboson samples in MC_PostICHEP.py
+
 2017-02-20 Harish Potti <harish.potti@cern.ch>
 	* Add Xsec for Sherpa 2.2.1 Diboson and low mass Z+Jets
-	
+
 2017-02-20 Tamara Vazquez Schroeder <tamara.vazquez.schroeder@cern.ch>
 	* Implement TrigGlobalEfficiencyCorrectionTool for 2LSS, 3L and 4L (SLT||DLT), nominal only
 	* Clean-up Decoration of old PromptLeptonIso
